@@ -1,3 +1,7 @@
+2001-05-02  Rob Browning  <rlb@cs.utexas.edu>
+
+	* srfi-11.scm (let-values): fix (a b c . d) case.  Thanks Martin.
+
 2001-05-02  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* Makefile.am (srfi_DATA): Added srfi-10.scm and srfi-17.scm.
